output/methods/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestInnerClass.java
public void testInnerList() throws Exception { [EOL]     Dog2 dog = new Dog2(); [EOL]     dog.name = "Spike"; [EOL]     dog.legs = new ArrayList<Dog2.Leg>(); [EOL]     dog.legs.add(dog.new Leg()); [EOL]     dog.legs.add(dog.new Leg()); [EOL]     dog.legs.get(0).length = 5; [EOL]     dog.legs.get(1).length = 4; [EOL]     ObjectMapper mapper = new ObjectMapper(); [EOL]     String dogJson = mapper.writeValueAsString(dog); [EOL]     Dog2 dogCopy = mapper.readValue(dogJson, Dog2.class); [EOL]     assertEquals(dogCopy.legs.get(1).length, 4); [EOL] } <line_num>: 28,48
